Minor Updates
Fixed ball spawn point bug
Minor scoring tweaks
First session of warnings fix